deployment/node-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: scraper
  labels: 
    app: scraper
spec:
  selector:
    app: scraper
  #type: NodePort
  ports:
  - name: http
    port: 8090
#    targetPort: 8090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scraper-v1
  labels:
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scraper
  template:
    metadata:
      labels:
        app: scraper
        version: v1
    spec:
      containers:
      - name: scraper
        image: puchoborja/scraper:0.0.7
        ports:
        - containerPort: 8090
        volumeMounts:
        - name: scraper-volume
          mountPath: /work/config
        ports:
        - containerPort: 8090
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "100m"
      volumes:
      - name: scraper-volume
        configMap:
          name: scraper-config
      serviceAccountName: scraper-serviceaccount
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scraper-v2
  labels:
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scraper
  template:
    metadata:
      labels:
        app: scraper
        version: v2
    spec:
      containers:
      - name: scraper
        image: puchoborja/scraper:0.0.8
        ports:
        - containerPort: 8090
        volumeMounts:
        - name: scraper-volume
          mountPath: /work/config
        ports:
        - containerPort: 8090
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "100m"
      volumes:
      - name: scraper-volume
        configMap:
          name: scraper-config
      serviceAccountName: scraper-serviceaccount
