deployment/deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: scraper-deployment
spec:
  selector:
    matchLabels:
      app: scraper
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: scraper
    spec:
      containers:
      - name: scraper
        image: puchoborja/scraper:0.0.3
        #args:
        # - sleep
        # - "9999"
        volumeMounts:
        - name: scraper-volume
          mountPath: /work/config
        ports:
        - containerPort: 8090
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "100m"
      volumes:
      - name: scraper-volume
        configMap:
          name: scraper-config

---
apiVersion: v1
kind: Service
metadata:
  name: scraper-service
spec:
  type: NodePort
  selector:
    app: scraper
  ports:
    - port: 8090
      targetPort: 8090
      nodePort: 30068
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: scraper-ingress
spec:
  backend:
    serviceName: scraper-service
    servicePort: 8090
