deployment/destination-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: scraper-destinationrule
spec:
  host: scraper
  subsets:
  - name: v1
    labels:
      version: v1
