deployment/node-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: scraper-gateway
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: scraper
spec:
  hosts:
  - "*"
  gateways:
  - scraper-gateway
  http:
  - route:
    - destination:
        host: scraper
        subset: v1
      weight: 80
    - destination:
        host: scraper
        subset: v2
      weight: 20
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: scraper
spec:
  host: scraper
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
